WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112600
[GTK] Wrong guard USE(GLX) in RedirectedXCompositeWindow
https://bugs.webkit.org/show_bug.cgi?id=112600
Summary
[GTK] Wrong guard USE(GLX) in RedirectedXCompositeWindow
Mario Sanchez Prada
Reported
2013-03-18 11:30:04 PDT
I got the following error today when trying to build with GLES2 + EGL enabled: In file included from Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContextClutter.cpp:21:0: Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContext.h:85:12: error: 'RedirectedXCompositeWindow' is not a member of 'WebCore' Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContext.h:85:12: error: 'RedirectedXCompositeWindow' is not a member of 'WebCore' Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContext.h:85:47: error: template argument 1 is invalid As per a conversation with Martin, this should be made conditional on OPENGL and X11, not just in GLX, so it works both in combinations like EGL + X11 and GLX + X11.
Attachments
Patch proposal
(2.87 KB, patch)
2013-03-18 11:35 PDT
,
Mario Sanchez Prada
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2013-03-18 11:35:18 PDT
Created
attachment 193616
[details]
Patch proposal Here comes the patch
Mario Sanchez Prada
Comment 2
2013-03-19 03:08:03 PDT
Committed
r146196
: <
http://trac.webkit.org/changeset/146196
>
Sergio Villar Senin
Comment 3
2013-07-03 10:40:59 PDT
***
Bug 111861
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug