[GTK] Wrong guard USE(GLX) in RedirectedXCompositeWindow https://bugs.webkit.org/show_bug.cgi?id=112600

Reviewed by Martin Robinson.

Replace USE(GLX) condition with USE(OPENGL) && PLATFORM(X11).

* platform/gtk/RedirectedXCompositeWindow.cpp: Updated guard.
* platform/gtk/RedirectedXCompositeWindow.h: Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@146196 bbb929c8-8fbe-4397-9dbb-9b2b20218538