third_party/WebKit/Source/WebCore/platform/gtk/RedirectedXCompositeWindow.cpp
@@ -28,7 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "RedirectedXCompositeWindow.h"
 
-#if USE(GLX)
+#if USE(OPENGL) && PLATFORM(X11)
 
 #include <X11/extensions/Xcomposite.h>
 #include <X11/extensions/Xdamage.h>
@@ -268,4 +268,4 @@ void RedirectedXCompositeWindow::callDamageNotifyCallback()
 
 } // namespace WebCore
 
-#endif // USE(GLX)
+#endif // USE(OPENGL) && PLATFORM(X11)
