third_party/WebKit/Source/WebCore/platform/gtk/RedirectedXCompositeWindow.h
@@ -28,7 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef  RedirectedXCompositeWindow_h
 #define  RedirectedXCompositeWindow_h
 
-#if USE(GLX)
+#if USE(OPENGL) && PLATFORM(X11)
 
 #include "GLContext.h"
 #include "IntSize.h"
@@ -81,6 +81,6 @@ private:
 
 } // namespace WebCore
 
-#endif // USE(GLX)
+#endif // USE(OPENGL) && PLATFORM(X11)
 
 #endif // RedirectedXCompositeWindow_h
